--- a/_data/data.yml
+++ b/_data/data.yml
@@ -44,7 +44,7 @@ sidebar:
 career-profile:
     title: About me
     summary: |
-      I’m a last year astronomy student at Universidad Nacional de La Plata and open source enthusiast, 
+      I am a last year astronomy student at Universidad Nacional de La Plata and open source enthusiast, 
       mostly interested in the fields of machine learning, high performance computing, cloud computing and 
       software programming for astrophysics.
 education:
@@ -72,15 +72,22 @@ education:
           - Bullet point
 experiences:
     - role: Student Developer 
-      time: May 2020 - present
+      time: Jun - Aug 2020
       company: TARDIS-SN
-      details:
+      details: |
+        I have been selected to be part of the Google Summer of Code program for
+        second year in a row.
+        <div style="line-height:90%;">
+          <br>
+        </div>
+        More information can be found at [epassaro.github.io/gsoc20](https://epassaro.github.io/gsoc20).
+
     - role: Student Developer 
       time: May - Aug 2019
       company: Python Software Foundation
       details: |
         I developed open source software with funding from the Google Summer of
-        Code program between May 27th -- Aug 15th, 2019. 
+        Code program between May 27th -- Aug 19th, 2019. 
         Over that period, I passed each of the three evaluations conducted 
         by my mentors.
         <div style="line-height:40%;">
@@ -101,7 +108,7 @@ experiences:
 projects:
     title: Projects
     intro: >
-      List of projects and organizations I'm currently involved in. <br><br>
+      List of projects and organizations I am currently involved in. <br><br>
 
       - [TARDIS](https://github.com/tardis-sn/tardis) -   _Core developer (2020-present)_ <br>
         An open source Monte Carlo radiative-transfer spectral synthesis code for 1D models of supernova ejecta.
@@ -135,7 +142,7 @@ skills:
 
       - +10 years of experience with GNU/Linux and the open source software ecosystem.
 
-      - <1 year of experience with cloud technologies such as Microsoft Azure and Google Cloud Platform.
+      - +1 year of experience with cloud technologies such as Microsoft Azure and Google Cloud Platform.
 
 #    toolset:
 #      - name: Python & Django
